feat: complete hero section

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -38,3 +38,16 @@
 .container {
   @apply max-w-[100%] px-3 mx-auto sm:max-w-[540px] md:max-w-[720px] lg:max-w-[960px] xl:max-w-[1140px] 2xl:max-w-[1320px];
 }
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.rotating-element {
+  animation: rotate 25s linear infinite;
+}
